<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dalvik Bytecode Editor</string>
    <string name="add_entry">Add File</string>
    <string name="save_file">Save</string>
    <string name="options">Options</string>
    <string name="folder_name">Folder Name</string>
    <string name="add_folder">Add Folder</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="view">View</string>
    <string name="signed">Signed</string>
    <string name="extract">Extract</string>
    <string name="extracting">Extract…</string>
    <string name="extracted">Extracted</string>
    <string name="extract_all">Extract All</string>
    <string name="extract_zip">Extract Zip</string>
    <string name="extract_path_empty">Extract path is empty.</string>
    <string name="name_empty">Name is empty.</string>
    <string name="file_exists">File "\"%s\" already exists.</string>
    <string name="extract_path">Extract Path</string>

    <string name="rename">Rename</string>
    <string name="cannot_rename">Cannot rename \"%s\".</string>
    <string name="delete">Delete</string>
    <string name="is_delete">Would you like to delete %s ?</string>
    <string name="deleted">Is deleted</string>
    <string name="copy">Copy</string>
    <string name="copy_to">Copy to clipboard\n</string>
    <string name="copy_message">File %s already exists. Overwrite?</string>
    <string name="copy_exception">File Copy Exception</string>
    <string name="copy_nothing">Nothing to copy</string>
    <string name="copy_exist">Haven\'t worked out folder copy yet…</string>
    <string name="copied">Copied</string>
    <string name="over_write">Overwrite</string>
    <string name="cut">Cut</string>
    <string name="cut_to">Cut to clipboard\n</string>
    <string name="paste">Paste</string>
    <string name="permission">Permission</string>
    <string name="file_browser">FileBrowser</string>
    <string name="directory_exists">Folder \"%s\" already exists.</string>
    <string name="directory_created">Folder \"%s\" already created.</string>
    <string name="directory_cannot_create">Cannot create folder \"%s\".</string>
    <string name="directory_empty">Folder name is empty</string>
    <string name="exit">Exit</string>
    <string name="wait">Please wait…</string>

    <string name="add_method">AddMethod</string>
    <string name="add_field">AddField</string>
    <string name="file_added">File Added</string>
    <string name="save_code">SaveCode</string>
    <string name="save_dexfile">SaveDexFile</string>
    <string name="save_text">Save</string>
    <string name="saved">Saved</string>
    <string name="method_editor">EditorMethod</string>
    <string name="remove_method">RemoveMethod</string>
    <string name="remove_field">RemoveField</string>
    <string name="rename_class">RenameClass</string>
    <string name="zip_editor_remove">Remove</string>
    <string name="zip_remove_progress">Remove…</string>
    <string name="is_remove">Is Remove ?</string>
    <string name="merger_dexfile">MergerDexFile</string>
    <string name="remove_class">RemoveClass</string>
    <string name="write_zip">Writing…</string>
    <string name="load_data">Loading…</string>
    <string name="signed_zip">Signing…</string>
    <string name="string_pool">StringPool</string>
    <string name="replace_axml">ReplaceAxml</string>
    <string name="replace_src_view">Search for:</string>
    <string name="replace_dst_view">Replace to:</string>
    <string name="replace">Replace</string>
    <string name="replace_count">replaced count: </string>
    <string name="search_string">SearchString</string>
    <string name="search_field">SearchField</string>
    <string name="search_method">SearchMethod</string>
    <string name="search_name">Name: </string>
    <string name="search_descriptor">Descriptor: </string>
    <string name="search">Search</string>
    <string name="search_class_name">ContainClass:</string>
    <string name="search_name_empty">Search name is empty.</string>
    <string name="search_not_found">%s not found.</string>



    <string name="prefs_text">Text Edit Preferences</string>
    <string name="preferences">Preferences</string>
    <string name="prompt">Prompt</string>
    <string name="is_save">Is Save? </string>
    <string name="saving">Saving…</string>
    <string name="class_exists">Class \"%s\" already exists.</string>


    <string name="line_wrap">Line Wrap</string>
    <string name="line_wrap_summary">Wraps lines when they get too long</string>

    <string name="appearance">Appearance</string>
    <string name="font_type">Font</string>
    <string name="font_type_summary">Choose a font type</string>
    <string name="font_size">Font Size</string>
    <string name="font_size_summary">Choose a font size</string>
    <string name="font_color">Font Color</string>
    <string name="font_color_summary">Choose a font color</string>
    <string name="bg_color">Background Color</string>
    <string name="bg_color_summary">Choose a background color</string>

    <string name="layout_viewer">LayoutViewer</string>
    <string name="zip_editor">ZipEditor</string>
    <string name="text_editor">TextEditor</string>
    <string name="class_editor">ClassEditor</string>
    <string name="class_item">ClassItem</string>
    <string name="search_class">SearchClass</string>
    <string name="field_list">FieldList</string>
    <string name="field_item_editor">FieldEditor</string>
    <string name="field_item_new">NewField</string>
    <string name="method_list">MethodList</string>
    <string name="code_editor">CodeEditor</string>
    <string name="method_item_editor">MethodEditor</string>
    <string name="method_item_new">NewMethod</string>
    <string name="class_info_editor">ClassInfoEditor</string>
    <string name="text_preferences">TextPreferences</string>
    <string name="about">About</string>
    <string name="about_content">Author:\n\n</string>
    <string name="replacing">Replacing…</string>
    <string name="searching">Searching…</string>
    <string name="from_start">From start</string>
    <string name="choose_color">Choose a color</string>
    <string name="ignore_name_descriptor">Ignore name and descriptor</string>
    <string name="ignore_descriptor">Ignore descriptor</string>
    <string name="opcode_info">Opcode info</string>

</resources>
