<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
 
      <LinearLayout
          android:id="@+id/linearlayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          

    <TextView 
        android:id="@+id/src_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/search_name"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium" />
            
    <EditText
        android:id="@+id/src_edit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:scrollHorizontally="true"
        android:autoText="false"
        android:capitalize="none"
        android:gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
          android:id="@+id/linearlayout2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          
          <CheckBox 
              android:id="@+id/from_start"
              android:text="@string/from_start"
              android:layout_marginLeft="20dip"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

    <CheckBox 
        android:id="@+id/replace"
        android:text="@string/replace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
     <TextView 
        android:id="@+id/replace_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/replace_dst_view"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium" />
            
    <EditText
        android:id="@+id/replace_edit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:scrollHorizontally="true"
        android:autoText="false"
        android:capitalize="none"
        android:gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />
  
</LinearLayout>
</ScrollView>
